--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -5,7 +5,7 @@
 
     <br />
     <div class="namecard-button">
-        <a href="Banner">
+        <a href="NewsfeedGroups/1">
             <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
 
         </a>
