--- a/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
@@ -1,24 +1,14 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
 
-<h1>OMG!</h1>
-
 <div class="match-label">
     <h4 class="my-matches-label">My Matches</h4>
 </div>
 
 <div class=" my-groups">
-    <dl>
+    <ul>
         @foreach (var item in Model.AllMatches)
-        {
-            //if (item.GroupName != null)
-            //{
-                //<dt class="my-groups-list">@Html.ActionLink(item.GroupName, "NewsfeedGroups", "Home", new { id = item.Id }) </dt>
-            //}
-            
-            if(item.UserName != null)
-            {
-                <dt class="my-matches-list">@Html.ActionLink(item.UserName, "CheckMatch", "Home", new { id = item.Id })</dt>
-            }
+        {    
+            <li>@item.UserName</li>
         }
-    </dl>
+    </ul>
 </div>
