--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="bc">
+﻿@model SozialWebApplication.Models.ViewModels.GroupViewModel
+
+<div class="bc">
     @{
         ViewBag.Title = "Banner";
     }
@@ -29,7 +31,6 @@
 
     <div class="overflowceeper">
         <div class="feed-body">
-            @model SozialWebApplication.Models.ViewModels.GroupViewModel
             @using SozialWebApplication.Services
             @using SozialWebApplication.Models.Entities
             @{if (Model.GroupWithId.Id == 0)
@@ -80,11 +81,11 @@
                                 <!--Form for like button-->
                                 @using (Html.BeginForm("ClickLike", "Home", FormMethod.Post))
                                 {
+                                    <input type="submit" value=" " class="like-img" />
                                     <div class="number-of-likes"><p>#@post.Like</p></div>
                                     <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
                                     <input type="hidden" name="hidden-postId" value="@post.Id" />
                                     <input type="hidden" name="hidden-like" value="add-like" />
-                                    <input type="submit" value=" " class="like-img" />
                                 }
                             </div>
 
@@ -93,8 +94,12 @@
                             {
                                 <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
                                 <input type="hidden" name="hidden-postId" value="@post.Id" />
-                                <input type="text" name="comment-input" id="comment-input" class="comment-input" placeholder="What do you think?" />
-                                <input type="submit" value="Send" />
+
+                            <div class="comment">
+                               <!-- <input type="text" name="comment-input" id="comment-input" class="comment-input" placeholder="What do you think?" />-->
+                                <textarea rows="2"  cols="80" name="comment" class="comment-textarea" placeholder="What do you think?"></textarea>
+                                <input type="submit" value="Send" class="submit-comment" />
+                            </div>
                             }
 
                             <!--Display top 25 comments for post-->
