--- a/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/Banner.cshtml
@@ -5,10 +5,10 @@
 
     <br/>
     <div class="namecard-button">
-        <a href="NewsfeedGroups/1">
+        <a href="/Home/NewsfeedGroups/111">
             <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
-               
-               </a>
+
+        </a>
         <div class="my-name">
             @Html.ActionLink(@Html.ViewContext.HttpContext.User.Identity.Name, "OwnNameCard", "NameCards")
         </div>
