--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -1,25 +1,63 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
 
-<div class="namecard">
-    <div class="information">
-        <img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">
-            <p>@Html.DisplayFor(model => model.userWithId.FullName)</p>
-            <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
+<div class="bc">
+    @{
+        ViewBag.Title = "Banner";
+    }
 
-        <div class="send-email">
-            <a href="mailto:@Html.DisplayFor(model => model.userWithId.Email)">@Html.DisplayFor(model => model.userWithId.Email)</a>
+    <br />
+    <div class="namecard-button">
+        <a href="/Home/NewsfeedGroups/111">
+            <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
+
+        </a>
+        <div class="my-name">
+            @Html.ActionLink(@Html.ViewContext.HttpContext.User.Identity.Name, "OwnNameCard", "NameCards")
         </div>
 
+        @using (Html.BeginForm("LogOff", "Account", new { ReturnUrl = "/Account/Login" }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div>
+                <input type="submit" value="Log Out" class="logout-button" />
+            </div>
+        }
+
+    </div>
+
+    <br />
+
+    <div class="overflowceeper">
+        <div class="feed-body">
+            <div class="namecard">
+                <div class="information">
+                    <img src="/Myndir/myndlogo.jpg" class="profile-picture" alt="profilepic">
+                    <p>@Html.DisplayFor(model => model.userWithId.FullName)</p>
+                    <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
+
+                    <div class="send-email">
+                        <a href="mailto:@Html.DisplayFor(model => model.userWithId.Email)">@Html.DisplayFor(model => model.userWithId.Email)</a>
+                    </div>
+
+                </div>
+                    <a href="~/NameCards/Search"><input type="button" class="follow" /></a>
+                    <a href="~/Home/SearchGroups"><input type="button" class="groups" /></a>
+                    <a href="~/NameCards/EditNameCard"><input type="button" class="edit" /></a>
+                    <a href="~/Home/CheckMatch"><input type="button" class="match" /></a>
+</div>
+
         </div>
-    <input type="button" class="follow" />
-    <input type="button" class="groups" />
-    <input type="button" class="edit" />
-    <input type="button" class="match" />
+    </div>
+
+    <br />
+
 </div>
 
 
 
-<script>
+
+<!--<script>
     $(".follow").click(function () {
         event.preventDefault();
 
@@ -71,3 +109,4 @@
     });
 
 </script>
+-->
