--- a/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
@@ -4,7 +4,7 @@
     <h4 class="my-matches-label">My Matches</h4>
 </div>
 
-<div class=" my-groups">
+<div class=" my-matches">
     <ul>
         @foreach (var item in Model.AllMatches)
         {    
