--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -14,6 +14,12 @@
   margin-left: 39%;
 }
 
+.groupName p{
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+}
+
 .post-img {
   width: 460px;
   margin-left:-2%;
@@ -38,7 +44,7 @@
   width: 15%;
   height: 50px;
   background-repeat: no-repeat;
-  margin-left: 70px;
+  margin-left: 61px;
   cursor: pointer;
   border: none;
 }
