--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -3,7 +3,7 @@
 }
 .information {
      font-weight: bold;
-     margin-left: 40%;
+     margin-left: 42%;
      position: absolute;
      margin-top: 3%;
      text-align: center;
@@ -11,13 +11,12 @@
 
 .namecard
 {
-    margin: 1%;
+    margin-top: 5%;
 }
 
 .profile-picture {
-    margin-left: -138%;
-    margin-top: 4%;
-    width: 71%;
+    margin-left: -212%;
+    width: 190px;
     position: absolute;
 }
 
@@ -106,14 +105,14 @@
 
 .profile-picture-edit {
   margin-left: -42.5%;
-  width: 14%;
+  width: 190px;
   position: absolute;
-  margin-top: 3%;
 }
 
 .edit-information {
   margin-left: 44%;
   text-align: center;
+  margin-top: 5%;
 }
 
 .edit-input {
