--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -33,16 +33,18 @@
         <div class="feed-body">
             @using SozialWebApplication.Services
             @using SozialWebApplication.Models.Entities
-            @{if (Model.GroupWithId.Id == 0)
-            {
-                <p>News Feed</p>    
-            }
-            
-            else
-            {
-                <p>@Model.GroupWithId.GroupName</p>
-            }
-            }
+            <div class="groupName">
+                @{if (Model.GroupWithId.Id == 0)
+                {
+                    <p>News Feed</p>
+                }
+
+                else
+                {
+                    <p>@Model.GroupWithId.GroupName</p>
+                }
+                }
+            </div>
 
             <!--Posting-->
             @using (Html.BeginForm("NewsfeedGroups", "Home", FormMethod.Post))
