--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/EditNameCard.cshtml
@@ -45,7 +45,7 @@
                     </div>
 
                     <input type="submit" value="Save" class="save" />
-                    <input type="button" value="Back" class="back" />
+                    <a href="~/NameCards/OwnNameCard"><input type="button" value="Back" class="back" /></a>
                 }
             </div>
         </div>
