--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -34,18 +34,29 @@
             @using SozialWebApplication.Services
             @using SozialWebApplication.Models.Entities
             <div class="groupName">
-                @{if (Model.GroupWithId.Id == 0)
+                <p>@Model.GroupWithId.GroupName</p>
+            </div>
+        <!--Add group to favorite or remove from favorite groups.-->    
+        <div class="add-favgroup">
+          
+                @using (Html.BeginForm("ClickAddToFavorite", "Home", FormMethod.Post))
                 {
-                    <p>News Feed</p>
-                }
-
-                else
-                {
-                    <p>@Model.GroupWithId.GroupName</p>
-                }
+                    if(!SozialWebApplication.Services.GroupService.Instance.IsUserInGroup(Model.GroupWithId.Id, User.Identity.Name))
+                    {
+                         <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
+                        <input type="hidden" name="hidden-favgroup" value="add-group" />
+                        <input type="submit" value="Add group to favorite" class="fav-submit" />
+                    }
+                    else
+                    {
+                       <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
+                        <input type="hidden" name="hidden-favgroup" value="remove-group" />
+                        <input type="submit" value="Remove group from favorite" class="fav-submit" /> 
+                    }
+                        
+                    
                 }
             </div>
-
             <!--Posting-->
             @using (Html.BeginForm("NewsfeedGroups", "Home", FormMethod.Post))
             {
