--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Site.css
@@ -83,7 +83,13 @@ h2 {
     color: #ff0000;
     font-weight: bold;
 }
+
 ul
 {
     list-style-type: none;
+}
+
+a:link, a:visited {
+    text-decoration: none;
+    color: black;
 }
