--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -122,8 +122,7 @@
   margin-left: 10%;
 }
 
-.text-input,
-.search {
+.text-input {
   background-image: url('/Myndir/input.jpg');
   border: 1px solid #ffd600;
   border-radius: 4px;
@@ -146,4 +145,13 @@
 .send-email > a:hover {
     text-decoration:underline;
     color: #ffd600;
+}
+
+.back {
+    border-radius: 4px;
+    border-color: #faa61f;
+    line-height: 25px;
+    width: 70px;
+    font-weight: bold;
+    background-image: url('/Myndir/takkar.jpg');
 }
