--- a/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Account/Login.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div>
-    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = "/Home/NewsfeedGroups/111" }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = "/Home/NewsfeedGroups/1" }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
     <div class="errorMessage">
