--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -146,4 +146,16 @@
 .comment-textarea {
   float: left;
   width: 50%;
+  border-radius: 5px;
+}
+
+.CommentDisplay {
+    border: 1px solid;
+    border-radius: 25px;
+    overflow-y: scroll;
+    height: 113px;
+}
+
+::-webkit-scrollbar{
+    width: 12px;
 }
