--- a/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/CheckMatch.cshtml
@@ -1,15 +1,52 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
 
-<div class="match-label">
-    <h4 class="my-matches-label">My Matches</h4>
-</div>
+<div class="bc">
+    @{
+        ViewBag.Title = "Banner";
+    }
 
-<div class=" my-matches">
-    <ul>
-        @foreach (var item in Model.AllMatches)
-        {    
-            <li>@Html.ActionLink(item.UserName, "OthersNameCard", "Home", new { id = item.Id })</li>
+    <br />
+    <div class="namecard-button">
+        <a href="/Home/NewsfeedGroups/111">
+            <img src="/Myndir/logo.jpg" class="name-logo" alt="name-logo" />
+
+        </a>
+        <div class="my-name">
+            @Html.ActionLink(@Html.ViewContext.HttpContext.User.Identity.Name, "OwnNameCard", "NameCards")
+        </div>
+
+        @using (Html.BeginForm("LogOff", "Account", new { ReturnUrl = "/Account/Login" }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div>
+                <input type="submit" value="Log Out" class="logout-button" />
+            </div>
         }
 
-    </ul>
+    </div>
+
+    <br />
+
+    <div class="overflowceeper">
+        <div class="feed-body">
+            <div class="match-label">
+                <h4 class="my-matches-label">My Matches</h4>
+            </div>
+
+            <div class=" my-matches">
+                <ul>
+                    @foreach (var item in Model.AllMatches)
+                    {
+                        <li>@Html.ActionLink(item.UserName, "OthersNameCard", "Home", new { id = item.Id })</li>
+                    }
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <br />
+
 </div>
+
