--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -79,7 +79,6 @@
 
                             <div class="like">
                                 <!-- <input type="button" class="like-img" /> -->
-                    
                                 <!--Form for like button-->
                                 @using (Html.BeginForm("ClickLike", "Home", FormMethod.Post))
                                 {
@@ -97,22 +96,28 @@
                                 <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
                                 <input type="hidden" name="hidden-postId" value="@post.Id" />
 
-                            <div class="comment">
-                               <!-- <input type="text" name="comment-input" id="comment-input" class="comment-input" placeholder="What do you think?" />-->
-                                <textarea rows="2"  cols="80" name="comment" class="comment-textarea" placeholder="What do you think?"></textarea>
-                                <input type="submit" value="Send" class="submit-comment" />
-                            </div>
+                                <div class="comment">
+                                    <!-- <input type="text" name="comment-input" id="comment-input" class="comment-input" placeholder="What do you think?" />-->
+                                    <textarea rows="2" cols="80" name="comment" class="comment-textarea" placeholder="What do you think?"></textarea>
+                                    <input type="submit" value="Send" class="submit-comment" />
+                                </div>
                             }
 
                             <!--Display top 25 comments for post-->
                             @{List<Comment> commentsForPost = SozialWebApplication.Services.PostService.Instance.GetAllCommentsForPost(post.Id);}
-                
-                            @foreach (var comment in commentsForPost)
-                            {
-                                <p>@comment.UserName</p>
-                                <p>@comment.DateCreated</p>
-                                <p class="post-comment">@comment.Body</p>
-                            }
+
+                            <div class="CommentDisplayParent">
+                                <div class="CommentDisplay">
+                                    @foreach (var comment in commentsForPost)
+                                    {
+
+                                        <p>@comment.UserName</p>
+                                        <p>@comment.DateCreated</p>
+                                        <p class="post-comment">@comment.Body</p>
+
+                                    }
+                                </div>
+                            </div>
                         </div>
                     </div>
                 }
