--- a/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/Search.css
@@ -1,78 +1,100 @@
-﻿/* Add new group */
+﻿/* GROUPS */
 
 .add-and-search {
     margin-top: 2%;
 }
 
-.adding {
+/* Add new group */
+
+.adding-groups {
     margin-right: 3%;
-    text-aling: center;
+    text-align: center;
 }
 
-.newgroup-box {
-  text-align: center;
-  font-weight: bold;
-  background-image: url('/Myndir/input.jpg');
-  border: 1px solid #ffd600;
-  border-radius: 4px;
-  line-height: 25px;
-  width: 259px;
-  float: left;
-  margin-top: 1%;
-  margin-left: 10%;
+.addnewgroup-box {
+    text-align: center;
+    font-weight: bold;
+    background-image: url('/Myndir/input.jpg');
+    border: 1px solid #ffd600;
+    border-radius: 4px;
+    line-height: 25px;
+    width: 259px;
+    float: left;
+    margin-top: 1%;
+    margin-left: 10%;
 }
 
 .addnewgroup-button {
-  background-image: url(/Myndir/takkar.jpg);
-  background-repeat: no-repeat;
-  border-radius: 4px;
-  border-color: #faa61f;
-  cursor: pointer;
-  width: 90px;
-  line-height: 22px;
-  font-weight: bold;
-  margin-top: 1%;
-  margin-left: 1%;
+    background-image: url(/Myndir/takkar.jpg);
+    background-repeat: no-repeat;
+    border-radius: 4px;
+    border-color: #faa61f;
+    cursor: pointer;
+    width: 90px;
+    line-height: 22px;
+    font-weight: bold;
+    margin-top: 1%;
+    margin-left: 1%;
 }
 
 /* Search bar */
 
-.searching {
-  margin-top: -5.5%;
-  text-align: right;
-  margin-right: 7%;
+.searching-groups {
+    margin-top: -5.5%;
+    text-align: right;
+    margin-right: 7%;
 }
 
-.search-box {
-  text-align: center;
-  font-weight: bold;
-  background-image: url('/Myndir/input.jpg');
-  border: 1px solid #ffd600;
-  border-radius: 4px;
-  line-height: 26px;
-  width: 259px;
-  float: left;
-  margin-left: 37%;
+.search-groups-box {
+    text-align: center;
+    font-weight: bold;
+    background-image: url('/Myndir/input.jpg');
+    border: 1px solid #ffd600;
+    border-radius: 4px;
+    line-height: 26px;
+    width: 259px;
+    float: left;
+    margin-left: 37%;
 }
 
-.button {
-  margin-left: -1%;
-  margin-bottom: 3%;
+.adding-groups-button, .searching-groups-button {
+    margin-left: -1%;
+    margin-bottom: 3%;
 }
 
-.search-button {
-  background-image: url('/Myndir/search.jpg');
-  border: none;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  margin-top: 0.5%;
-  margin-right: 3%;
+.search-groups-button {
+    background-image: url('/Myndir/search.jpg');
+    border: none;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    margin-top: 0.5%;
+    margin-right: 3%;
 }
 
-/* Search followers and groups - display lists */
+/* Groups */
+
+.groups-lists {
+    margin-top: 5%;
+    float: left;
+    width: 33%;
+}
+
+.groups-labels {
+    text-decoration: underline;
+} 
+
+.my-groups-label, .all-groups-label, .search-groups-label {
+    font-size: 20px;
+}
+
+.my-groups-list, .all-groups-list, .search-groups-list {
+    text-align: center;
+}
+
+/* Search followers and groups - Display lists */
 
 .search-groups-list, .all-groups-list, .my-groups-list, .search-users-list, .all-users-list, .my-friends-list {
     text-decoration: none;
@@ -80,89 +102,43 @@
     font-weight: bold;
 }
 
-/*Search groups */
 
-.groups-lists {
-  margin-top: 5%;
-  float: left;
-  width: 33%;
-}
+/* FOLLOWERS */
 
+/* Search bar */
 
-.my-groups-label, .all-groups-label, .search-groups-label {
-    font-size: 20px;
-}
-
-
-.groups-labels {
-    text-decoration: underline;
-} 
-
-/*
-.my-groups-label {
-    margin-left: 17.5%;
-}
-
-.all-groups-label {
-  margin-left: 49%;
-  margin-top: -3%;
-}
-
-.search-groups-label {
-  margin-left: 74%;
-  margin-top: -3%;
-}
-
-
-.my-groups {
+.searching-users {
 
 }
 
-.all-groups {
+.search-users-box {
 
 }
 
-.search-groups {
- 
-}
-    */
+.searching-users-button {
 
-.my-groups-list, .all-groups-list, .search-groups-list {
-    text-align: center;
 }
 
-/*Search followers*/
+.search-users-button {
+
+}
+
+/* Users */
 
 .users-lists {
+    margin-top: 5%;
+    float: left;
+    width: 33%;
 }
 
 .users-labels {
-
+    text-decoration: underline;
 }
 
-.my-friends-label {
-    margin-left: 13%;
+.my-friends-label, .all-users-label, .search-users-label {
+    font-size: 20px;
 }
 
-.all-users-label {
-    margin-left: 47%;
-    margin-top: -3%;
-}
-
-.search-users-label {
-    margin-left: 79%;
-    margin-top: -3%;
-}
-
-.my-friends-list {
-    margin-left: 14%;
+.my-friends-list, .all-users-list, .search-users-list {
+    text-align: center;
 } 
-
-.all-users-list {
-    margin-left: 45%;
-} 
-
-.search-users-list {
-    margin-left: 60%;
-}
-
